--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -50,51 +50,63 @@
                 </table>
             </div>
             <div class="result">
-                <div class="add_element">
-                    <p>Add element: </p>
-                    <ul class="added_element">
-                        <li class="weight">
-                            <span>Weight</span>
-                            <input type="text">
-                        </li>
-                        <li class="price">
-                            <span>Price</span>
-                            <input type="text">
-                        </li>
-                        <li class="capacity">
-                            <span>Capacity</span>
-                            <input type="text">
-                        </li>
-                        <li class="producer">
-                            <span>Producer</span>
-                            <input type="text">
-                        </li>
-                    </ul>
-                    <button id="added">Add element</button>
-                </div>
-                <div class="add_element">
-                    <p>Search element: </p>
-                    <ul class="added_element">
-                        <li class="weight">
-                            <span>Weight</span>
-                            <input type="text">
-                        </li>
-                        <li class="price">
-                            <span>Price</span>
-                            <input type="text">
-                        </li>
-                        <li class="capacity">
-                            <span>Capacity</span>
-                            <input type="text">
-                        </li>
-                        <li class="producer">
-                            <span>Producer</span>
-                            <input type="text">
-                        </li>
-                    </ul>
-                    <button id="search">Search element</button>
-                </div>
                 <div id="result"></div>
+                <div class="features">
+                    <div class="add_element">
+                        <p>Add element: </p>
+                        <ul class="added_element">
+                            <li class="weight">
+                                <span>Weight</span>
+                                <input type="text">
+                            </li>
+                            <li class="price">
+                                <span>Price</span>
+                                <input type="text">
+                            </li>
+                            <li class="capacity">
+                                <span>Capacity</span>
+                                <input type="text">
+                            </li>
+                            <li class="producer">
+                                <span>Producer</span>
+                                <input type="text">
+                            </li>
+                        </ul>
+                        <button id="added">Add element</button>
+                    </div>
+                    <div class="add_element">
+                        <p>Search element: </p>
+                        <ul class="search_element">
+                            <li class="weight">
+                                <span>Weight</span>
+                                <input type="text">
+                            </li>
+                            <li class="price">
+                                <span>Price</span>
+                                <input type="text">
+                            </li>
+                            <li class="capacity">
+                                <span>Capacity</span>
+                                <input type="text">
+                            </li>
+                            <li class="producer">
+                                <span>Producer</span>
+                                <input type="text">
+                            </li>
+                        </ul>
+                        <button id="search">Search element</button>
+                    </div>
+                    <div class="add_element">
+                        <p>Delete element: </p>
+                        <ul class="delete_element">
+                            <li class="id">
+                                <span>ID</span>
+                                <input type="text">
+                            </li>
+                        </ul>
+                        <button id="delete">Delete element</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
